grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    empty_statement: () => ';',

    expression_statement: ($) => choice(seq($._expression, ';'), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.macro_invocation,
        $.macro_definition,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.mod_item,
        $.foreign_mod_item,
        $.struct_item,
        $.union_item,
        $.enum_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.trait_item,
        $.associated_type,
        $.let_declaration,
        $.use_declaration,
        $.extern_crate_declaration,
        $.static_item
      ),

    // Section - Macro definitions

    _tokens: ($) => choice($.token_tree, $.token_repetition, $.metavariable, $._non_special_token),

    token_tree: ($) =>
      choice(seq('(', repeat($._tokens), ')'), seq('[', repeat($._tokens), ']'), seq('{', repeat($._tokens), '}')),

    attribute_item: ($) => seq('#', '[', $.attribute, ']'),

    inner_attribute_item: ($) => seq('#', '!', '[', $.attribute, ']'),

    attribute: ($) =>
      seq(
        $._path,
        optional(
          choice(seq('=', field('value', $._expression)), field('arguments', alias($.delim_token_tree, $.token_tree)))
        )
      ),

    mod_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'mod',
        field('name', $.identifier),
        choice(';', field('body', $.declaration_list))
      ),

    foreign_mod_item: ($) =>
      seq(
        optional('unsafe'),
        $.extern_modifier,
        choice(';', field('body', alias($._foreign_declaration_list, $.declaration_list)))
      ),

    declaration_list: ($) => seq('{', repeat($._declaration_statement), '}'),

    // Items in `extern` blocks may be `safe` functions and `safe` or `unsafe` statics. `safe` is a keyword only where
    // such an item starts: accepting it on every item would make it one wherever an item can start, breaking its uses as
    // an identifier (`let safe = …; safe = …;`).
    _foreign_declaration_list: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $._declaration_statement,
            alias($._safe_function_signature_item, $.function_signature_item),
            alias($._qualified_static_item, $.static_item)
          )
        ),
        '}'
      ),

    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'struct',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        choice(
          seq(optional($.where_clause), field('body', $.field_declaration_list)),
          seq(field('body', $.ordered_field_declaration_list), optional($.where_clause), ';'),
          ';'
        )
      ),

    union_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'union',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        optional($.where_clause),
        field('body', $.field_declaration_list)
      ),

    enum_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'enum',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        optional($.where_clause),
        field('body', $.enum_variant_list)
      ),

    enum_variant_list: ($) => seq('{', sepBy(',', seq(repeat($.attribute_item), $.enum_variant)), optional(','), '}'),

    enum_variant: ($) =>
      seq(
        optional($.visibility_modifier),
        field('name', $.identifier),
        field('body', optional(choice($.field_declaration_list, $.ordered_field_declaration_list))),
        optional(seq('=', field('value', $._expression)))
      ),

    field_declaration_list: ($) =>
      seq('{', sepBy(',', seq(repeat($.attribute_item), $.field_declaration)), optional(','), '}'),

    field_declaration: ($) =>
      seq(optional($.visibility_modifier), field('name', $._field_identifier), ':', field('type', $._type)),

    ordered_field_declaration_list: ($) =>
      seq(
        '(',
        sepBy(',', seq(repeat($.attribute_item), optional($.visibility_modifier), field('type', $._type))),
        optional(','),
        ')'
      ),

    extern_crate_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        'extern',
        $.crate,
        field('name', $.identifier),
        optional(seq('as', field('alias', $.identifier))),
        ';'
      ),

    const_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'const',
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
        ';'
      ),

    static_item: ($) => seq(optional($.visibility_modifier), $._static_declaration),

    _static_declaration: ($) =>
      seq(
        'static',

        // Not actual rust syntax, but made popular by the lazy_static crate.
        optional('ref'),

        optional($.mutable_specifier),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
        ';'
      ),

    type_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'type',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        optional($.where_clause),
        '=',
        field('type', $._type),
        optional($.where_clause),
        ';'
      ),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        'fn',
        field('name', choice($.identifier, $.metavariable)),
        field('type_parameters', optional($.type_parameters)),
        field('parameters', $.parameters),
        optional(seq('->', field('return_type', $._type))),
        optional($.where_clause),
        field('body', $.block)
      ),

    function_signature_item: ($) =>
      seq(optional($.visibility_modifier), optional($.function_modifiers), $._function_signature),

    _function_signature: ($) =>
      seq(
        'fn',
        field('name', choice($.identifier, $.metavariable)),
        field('type_parameters', optional($.type_parameters)),
        field('parameters', $.parameters),
        optional(seq('->', field('return_type', $._type))),
        optional($.where_clause),
        ';'
      ),

    function_modifiers: ($) => repeat1(choice('async', 'default', 'const', 'unsafe', $.extern_modifier)),

    where_clause: ($) => prec.right(seq('where', optional(seq(sepBy1(',', $.where_predicate), optional(','))))),

    where_predicate: ($) =>
      seq(
        field(
          'left',
          choice(
            $.lifetime,
            $._type_identifier,
            $.scoped_type_identifier,
            $.generic_type,
            $.reference_type,
            $.pointer_type,
            $.tuple_type,
            $.array_type,
            $.higher_ranked_trait_bound,
            alias(choice(...primitiveTypes), $.primitive_type)
          )
        ),
        field('bounds', $.trait_bounds)
      ),

    impl_item: ($) =>
      seq(
        optional('unsafe'),
        'impl',
        field('type_parameters', optional($.type_parameters)),
        optional(
          seq(
            optional('!'),
            field('trait', choice($._type_identifier, $.scoped_type_identifier, $.generic_type)),
            'for'
          )
        ),
        field('type', $._type),
        optional($.where_clause),
        choice(field('body', $.declaration_list), ';')
      ),

    trait_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional('unsafe'),
        'trait',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        field('bounds', optional($.trait_bounds)),
        optional($.where_clause),
        field('body', $.declaration_list)
      ),

    associated_type: ($) =>
      seq(
        'type',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        field('bounds', optional($.trait_bounds)),
        optional($.where_clause),
        ';'
      ),

    trait_bounds: ($) => seq(':', sepBy1('+', choice($._type, $.lifetime, $.higher_ranked_trait_bound))),

    higher_ranked_trait_bound: ($) => seq('for', field('type_parameters', $.type_parameters), field('type', $._type)),

    removed_trait_bound: ($) => seq('?', $._type),

    type_parameters: ($) =>
      prec(
        1,
        seq(
          '<',
          sepBy1(
            ',',
            seq(
              repeat($.attribute_item),
              choice($.metavariable, $.type_parameter, $.lifetime_parameter, $.const_parameter)
            )
          ),
          optional(','),
          '>'
        )
      ),

    const_parameter: ($) =>
      seq(
        'const',
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', choice($.block, $.identifier, $._literal, $.negative_literal))))
      ),

    type_parameter: ($) =>
      prec(
        1,
        seq(
          field('name', $._type_identifier),
          optional(field('bounds', $.trait_bounds)),
          optional(seq('=', field('default_type', $._type)))
        )
      ),

    lifetime_parameter: ($) => prec(1, seq(field('name', $.lifetime), optional(field('bounds', $.trait_bounds)))),

    let_declaration: ($) =>
      seq(
        'let',
        optional($.mutable_specifier),
        field('pattern', $._pattern),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', $._expression))),
        optional(seq('else', field('alternative', $.block))),
        ';'
      ),

    use_declaration: ($) => seq(optional($.visibility_modifier), 'use', field('argument', $._use_clause), ';'),

    _use_clause: ($) => choice($._path, $.use_as_clause, $.use_list, $.scoped_use_list, $.use_wildcard),

    scoped_use_list: ($) => seq(field('path', optional($._path)), '::', field('list', $.use_list)),

    use_list: ($) => seq('{', sepBy(',', choice($._use_clause)), optional(','), '}'),

    use_as_clause: ($) => seq(field('path', $._path), 'as', field('alias', $.identifier)),

    use_wildcard: ($) => seq(optional(seq(optional($._path), '::')), '*'),

    parameters: ($) =>
      seq(
        '(',
        sepBy(
          ',',
          seq(repeat($.attribute_item), choice($.parameter, $.self_parameter, $.variadic_parameter, '_', $._type))
        ),
        optional(','),
        ')'
      ),

    self_parameter: ($) => seq(optional('&'), optional($.lifetime), optional($.mutable_specifier), $.self),

    variadic_parameter: ($) =>
      seq(optional($.mutable_specifier), optional(seq(field('pattern', $._pattern), ':')), '...'),

    parameter: ($) =>
      seq(optional($.mutable_specifier), field('pattern', choice($._pattern, $.self)), ':', field('type', $._type)),

    extern_modifier: ($) => seq('extern', optional($.string_literal)),

    visibility_modifier: ($) =>
      choice($.crate, seq('pub', optional(seq('(', choice($.self, $.super, $.crate, seq('in', $._path)), ')')))),

    // Section - Types

    _type: ($) =>
      choice(
        $.abstract_type,
        $.reference_type,
        $.metavariable,
        $.pointer_type,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.unit_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.macro_invocation,
        $.never_type,
        $.dynamic_type,
        $.bounded_type,
        $.removed_trait_bound,
        alias(choice(...primitiveTypes), $.primitive_type)
      ),

    lifetime: ($) => prec(1, seq("'", $.identifier)),

    array_type: ($) => seq('[', field('element', $._type), optional(seq(';', field('length', $._expression))), ']'),

    function_type: ($) =>
      seq(
        optional($.for_lifetimes),
        prec(
          PREC.call,
          seq(
            choice(
              field('trait', choice($._type_identifier, $.scoped_type_identifier)),
              seq(optional($.function_modifiers), 'fn')
            ),
            field('parameters', $.parameters)
          )
        ),
        optional(seq('->', field('return_type', $._type)))
      ),

    tuple_type: ($) => seq('(', sepBy1(',', $._type), optional(','), ')'),

    unit_type: () => seq('(', ')'),

    generic_type: ($) =>
      prec(
        1,
        seq(
          field('type', choice($._type_identifier, $._reserved_identifier, $.scoped_type_identifier)),
          field('type_arguments', $.type_arguments)
        )
      ),

    bounded_type: ($) =>
      prec.left(-1, seq(choice($.lifetime, $._type, $.use_bounds), '+', choice($.lifetime, $._type, $.use_bounds))),

    use_bounds: ($) =>
      seq('use', token(prec(1, '<')), sepBy(',', choice($.lifetime, $._type_identifier)), optional(','), '>'),

    type_arguments: ($) =>
      seq(
        token(prec(1, '<')),
        sepBy1(',', seq(choice($._type, $.type_binding, $.lifetime, $._literal, $.block), optional($.trait_bounds))),
        optional(','),
        '>'
      ),

    type_binding: ($) =>
      seq(
        field('name', $._type_identifier),
        field('type_arguments', optional($.type_arguments)),
        '=',
        field('type', $._type)
      ),

    reference_type: ($) => seq('&', optional($.lifetime), optional($.mutable_specifier), field('type', $._type)),

    pointer_type: ($) => seq('*', choice('const', $.mutable_specifier), field('type', $._type)),

    never_type: () => '!',

    abstract_type: ($) =>
      seq(
        'impl',
        optional(seq('for', $.type_parameters)),
        field(
          'trait',
          prec(
            1,
            choice(
              $._type_identifier,
              $.scoped_type_identifier,
              $.removed_trait_bound,
              $.generic_type,
              $.function_type,
              $.tuple_type,
              $.bounded_type
            )
          )
        )
      ),

    dynamic_type: ($) =>
      seq(
        'dyn',
        field(
          'trait',
          choice(
            $.higher_ranked_trait_bound,
            $._type_identifier,
            $.scoped_type_identifier,
            $.generic_type,
            $.function_type,
            $.tuple_type
          )
        )
      ),

    mutable_specifier: () => 'mut',

    // Section - Expressions

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.await_expression,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        prec(1, $.macro_invocation),
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    unary_expression: ($) => prec(PREC.unary, seq(choice('-', '*', '!'), $._expression)),

    self: () => 'self',
